# future-prediction-SDK

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agent_sdk/: README.md  ccr_config.template.json  common.py  config.py  gen_ccr_config.py  llm_adapter.py  run.sh  run_batch.sh  run_codex.sh  run_forecast.py  sync_skills.py  tools_mcp.py
agent_sdk/codex/: __init__.py  run_forecast.py
agent_sdk/skills/academic-competition/: SKILL.md
agent_sdk/skills/ai-model-benchmark/: SKILL.md
agent_sdk/skills/armed-conflict/: SKILL.md
agent_sdk/skills/as-of-research/: SKILL.md
agent_sdk/skills/base-rate-estimation/: SKILL.md
agent_sdk/skills/calibration/: SKILL.md
config/: README.md
config/agent/: default.yaml
config/run/: futureworld_hog_gpt55.yaml
docs/: NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_v2.md  analysis_phase2.md  analysis_phase3.md  analysis_phase4.md
futurecast/: __init__.py
futurecast/data/: loader.py
futurecast/experience/: store.py
futurecast/guard/: __init__.py  as_of.py
futurecast/io/: schema.py  scoring.py  to_submission.py
futurecast/llm/: README  __init__.py  base.py  env_utils.py  gpt_sub2api_client.py  openai_client.py  openrouter_newapi_client.py  openrouter_test_client.py
futurecast/loop/: agent.py
futurecast/model/: backend.py  claude_backend.py  coremllm_backend.py
futurecast/playbook/: playbook_A_numeric.md  playbook_B_event.md  render.py
futurecast/tools/: registry.py
scripts/: run_forecast_corellm.py
tasks/: sample_futureworld_0624_30.jsonl  standardized_data.jsonl
tests/: test_smoke.py
(+55 files in other folders)
